navigate added to navbar

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.fui-Persona__primaryText.rvj41k9{
+  margin-top: 5px;
+}
