--- a/src/components/components.css
+++ b/src/components/components.css
@@ -14,14 +14,6 @@
     font-size: 17px;
   }
 
-.itemButton {
-    background-color: red;
-    width: 100%;
-    height: 100px;
-     align-items: left; 
-     justify-content: left,
-  }
-
-.itemButton:hover {
-background-color: red;
+.itemButton span{
+width: 100%;
 }
